# vimpathfind

./: .gitignore  Makefile  README.md  configure.ac  tags
include/: config.h
src/: Makefile.am  Makefile.in  cli.c  core.c  core.h  list.c  list.h  main.c
tests/: Makefile.am  Makefile.in  test_cli.c  test_core.c  test_list.c
